# python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: check.yml  dependabot-auto.yml
scripts/: manage-git.bat
src/my-package/: main.py
