[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-package"
version = "0.1.0"
authors = [
  { name = "Yaron Koresh" },
]
description = "Example Package"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [ ]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.90.0",
    "ruff",
    "poethepoet",
    "pre-commit",
    "build",
    "pydantic>=2.0.0",
    "mypy>=1.0",
    "vulture>=2.10",
    "websockets>=12.0",
    "pyinstaller>=6.0",
    "briefcase>=0.3.0"
]

[project.scripts]
run-my-package = "my_package.main:main"

[project.urls]
Homepage = "https://github.com/my-username/my-package"
Repository = "https://github.com/my-username/my-package"
Issues = "https://github.com/my-username/my-package/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/my-package"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]

# --- RUFF CONFIGURATION ---
[tool.ruff]
target-version = "py38"
line-length = 80

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = [
    "E501",
    "E402",
    "E741",
    "F401"
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*" = ["E731"]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- POE TASKS ---
[tool.poe.tasks]
test = "pytest tests/"
compile = { cmd = "python -m compileall -q ." }
pre-commit = { cmd = "pre-commit run --all-files", env = { SKIP = "no-commit-to-branch" } }
clean = { cmd = '''python -Bc "
import pathlib, shutil;
targets = {
        'directories': {
            '__pycache__', '.pytest_cache', '.ruff_cache', '.mypy_cache',
            '.tox', '.nox', '.cache', '.ipynb_checkpoints', 'htmlcov',
            'build', 'dist', '.eggs', '*.egg-info', '.coverage.reports'
        },
        'files': {
            '.coverage', '.coverage.*', '.sqlite', 'nosetests.xml',
            'coverage.xml', '*.pyc', '*.pyo', '*.pyd', '.DS_Store'
        }
};
for p in pathlib.Path('.').rglob('*'):
        if p.name in targets['directories'] or any(p.match(pat) for pat in targets['directories']):
            if p.is_dir(): shutil.rmtree(p, ignore_errors=True)
        elif p.name in targets['files'] or any(p.match(pat) for pat in targets['files']):
            if p.is_file(): p.unlink(missing_ok=True)
"''' }
dead-code = { cmd = "vulture src/korshmer --min-confidence 80 --sort-by-size" }
strip-comments = { cmd = '''python -c "
import ast
import tokenize
import io
import pathlib
import re

def remove_docstrings(source):
    try:
        tree = ast.parse(source)
        docstring_positions = set()

        for node in ast.walk(tree):
            if isinstance(node, (ast.FunctionDef, ast.ClassDef, ast.Module)):
                if (node.body and isinstance(node.body[0], ast.Expr) and
                    isinstance(node.body[0].value, (ast.Str, ast.Constant))):
                    stmt = node.body[0]
                    docstring_positions.add((stmt.lineno, stmt.end_lineno))

        lines = source.split('\n')
        result_lines = []
        for i, line in enumerate(lines, 1):
            skip = False
            for start, end in docstring_positions:
                if start <= i <= end:
                    skip = True
                    break
            if not skip:
                result_lines.append(line)

        return '\n'.join(result_lines)
    except:
        return source

def strip_comments_and_format(file_path):
    try:
        with open(file_path, 'r', encoding='utf-8', newline='') as f:
            source = f.read()

        source = remove_docstrings(source)

        tokens = tokenize.generate_tokens(io.StringIO(source).readline)
        result = []

        for toktype, tokval, start, end, line in tokens:
            if toktype == tokenize.COMMENT:
                continue
            result.append((toktype, tokval, start, end, line))

        cleaned = tokenize.untokenize(result)
        lines = cleaned.split('\n')

        blank_count = 0
        final_lines = []
        for line in lines:
            if not line.strip():
                blank_count += 1
                if blank_count <= 2:
                    final_lines.append(line)
            else:
                blank_count = 0
                final_lines.append(line)

        cleaned = '\n'.join(final_lines)

        with open(file_path, 'w', encoding='utf-8', newline='') as f:
            f.write(cleaned)

        print(f'Stripped: {file_path}')

    except Exception as e:
        print(f'Failed {file_path}: {e}')

for p in pathlib.Path('.').rglob('*.py'):
    strip_comments_and_format(p)
"''' }
check = ["clean", "compile", "dead-code", "strip-comments", "pre-commit", "test", "clean"]
build = { cmd = "python -m build" }
build-wheel = { cmd = "python -m build --wheel" }
build-exe = { cmd = "python scripts/build_all.py --pyinstaller" }
hook = { cmd = "pre-commit install" }

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = true

[tool.briefcase]
project_name = "my-package"
bundle = "io.github.yaronkoresh"
version = "0.1.0"
url = "https://github.com/my-username/my-package"
license = "MIT"

[tool.briefcase.app.my-package]
formal_name = "My Package"
description = "Example Package"
long_description = "An example for python packages"
icon = "assets/icon"
sources = ["src/my-package"]
requires = []

[tool.briefcase.app.my-package.macOS]
requires = []

[tool.briefcase.app.my-package.linux]
requires = []

[tool.briefcase.app.my-package.windows]
requires = []